@@ -21,6 +21,7 @@
 * CardStream: Support PEN currency [shasum]
 * Firstdata E4 (Payeezy): Set correct ECI value for card present swipes [jasonwebster] #2318
 * Secure Pay AU: Add scrubbing support to Secure Pay AU [bruno] #2253
+* Authorize.net: Add #unstore support [jimryan] #2293
 
 == Version 1.62.0 (December 5, 2016)
 * AuthorizeNet: Map to standard AVSResult codes [shasum]
